--- a/IHM/KDMUSIQUE/favoris.html
+++ b/IHM/KDMUSIQUE/favoris.html
@@ -239,17 +239,149 @@
                 <div class="wrap-list-artist">
                     <label>Vos artistes</label>
                     <div class="wrap-artist">
-                        <div class="owl-carousel">
-                            <div class="item">item 1</div>
-                            <div class="item">item 1</div>
-                            <div class="item">item 1</div>
-                            <div class="item">item 1</div>
-                            <div class="item">item 1</div>
-                            <div class="item">item 1</div>
-                            <div class="item">item 1</div>
-                            <div class="item">item 1</div>
-                            <div class="item">item 1</div>
-                            <div class="item">item 1</div>
+                        <div id="slider">
+                            <input type="radio" name="slider" id="slide1" checked>
+                            <input type="radio" name="slider" id="slide2">
+                            <div id="slides">
+                               <div id="overflow">
+                                  <div class="inner">
+                                     <div class="slide slide_1">
+                                        <div class="slide-content">
+                                           <div class="artist">
+                                               <img src="images/circle.png">
+                                               <img src="images/circle.png">
+                                               <img src="images/circle.png">
+                                               <img src="images/circle.png">                                                                                        
+                                           </div>
+                                           <div class="artist-name">
+                                               <label>Post Malone</label>
+                                               <label>Post Malone</label>
+                                               <label>Post Malone</label>
+                                               <label>Post Malone</label>
+                                           </div>
+                                        </div>
+                                     </div>
+                                     <div class="slide slide_2">
+                                        <div class="slide-content">
+                                            <div class="artist">
+                                                <img src="images/circle.png">
+                                                <img src="images/circle.png">
+                                                <img src="images/circle.png">
+                                                <img src="images/circle.png">                                                                                        
+                                            </div>
+                                            <div class="artist-name">
+                                                <label>Post Malone</label>
+                                                <label>Post Malone</label>
+                                                <label>Post Malone</label>
+                                                <label>Post Malone</label>
+                                            </div>
+                                        </div>
+                                     </div>
+                                  </div>
+                               </div>
+                            </div>
+                            <div id="controls">
+                               <label for="slide1"></label>
+                               <label for="slide2"></label>
+                            </div>
+                         </div>
+                    </div>
+                </div>
+
+                <div class="wrap-list-recommandations">
+                    <label>Recommandations</label>
+                    <div class="wrap-recommandations">
+                        <div id="carouselExampleControls3" class="carousel slide" data-ride="carousel">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <div class="row">
+                                        <div class="col">
+                                            <div class="album">
+                                                <a href="#">
+                                                    <img src="images/circle.png" alt="circle" style="width: 150px;">
+                                                    <div class="nomDeAlbum">Circles</div>
+                                                    <div class="chanteur">Post Malone</div>
+                                                </a>
+                                            </div>
+                                        </div>
+                                        <div class="col">
+                                            <div class="album">
+                                                <a href="#">
+                                                    <img src="images/circle.png" alt="circle" style="width: 150px;">
+                                                    <div class="nomDeAlbum">Circles</div>
+                                                    <div class="chanteur">Post Malone</div>
+                                                </a>
+                                            </div>
+                                        </div>
+                                        <div class="col">
+                                            <div class="album">
+                                                <a href="#">
+                                                    <img src="images/circle.png" alt="circle" style="width: 150px;">
+                                                    <div class="nomDeAlbum">Circles</div>
+                                                    <div class="chanteur">Post Malone</div>
+                                                </a>
+                                            </div>
+                                        </div>
+                                        <div class="col">
+                                            <div class="album">
+                                                <a href="#">
+                                                    <img src="images/circle.png" alt="circle" style="width: 150px;">
+                                                    <div class="nomDeAlbum">Circles</div>
+                                                    <div class="chanteur">Post Malone</div>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="carousel-item">
+                                    <div class="row" id="row2">
+                                        <div class="col">
+                                            <div class="album">
+                                                <a href="#">
+                                                    <img src="images/circle.png" alt="circle" style="width: 150px;">
+                                                    <div class="nomDeAlbum">Circles</div>
+                                                    <div class="chanteur">Post Malone</div>
+                                                </a>
+                                            </div>
+                                        </div>
+                                        <div class="col">
+                                            <div class="album">
+                                                <a href="#">
+                                                    <img src="images/circle.png" alt="circle" style="width: 150px;">
+                                                    <div class="nomDeAlbum">Circles</div>
+                                                    <div class="chanteur">Post Malone</div>
+                                                </a>
+                                            </div>
+                                        </div>
+                                        <div class="col">
+                                            <div class="album">
+                                                <a href="#">
+                                                    <img src="images/circle.png" alt="circle" style="width: 150px;">
+                                                    <div class="nomDeAlbum">Circles</div>
+                                                    <div class="chanteur">Post Malone</div>
+                                                </a>
+                                            </div>
+                                        </div>
+                                        <div class="col">
+                                            <div class="album">
+                                                <a href="artistes.html">
+                                                    <img src="images/circle.png" alt="circle" style="width: 150px;">
+                                                    <div class="nomDeAlbum">Circles</div>
+                                                    <div class="chanteur">Post Malone</div>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <a class="carousel-control-prev" href="#carouselExampleControls3" role="button" data-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true" id="btnprev"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="carousel-control-next" href="#carouselExampleControls3" role="button" data-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true" id="btnnext"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
                         </div>
                     </div>
                 </div>
