--- a/IHM/KDMUSIQUE/favoris.html
+++ b/IHM/KDMUSIQUE/favoris.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accueil</title>
+    <title>Favoris</title>
     <!--CSS-->
     <link rel="stylesheet" href="css/test.css">
     <link rel="stylesheet" href="css/favoris.css">
@@ -45,25 +45,25 @@
     <div class="mainBody">
         <div class="categories">
             <div class="categoriesSelection">
-                <span class="category">
+                <span class="category" id="accueil">
                     <a class="icon">
                         Accueil
                     </a>
                     <img src="icon/Discover.png" style="width:20px; height:20px; margin-left: 40px;">
                 </span>
-                <span class="category">
+                <span class="category" id="album">
                     <a class="icon">
                         Album
                     </a>
                     <img src="icon/Albums.png" style="width:20px; height:20px; margin-left: 40px;">
                 </span>
-                <span class="category">
+                <span class="category" id="favoris">
                     <a class="icon">
                         Favoris
                     </a>
                     <img src="icon/Favourite.png" style="width:20px; height:20px; margin-left: 40px;">
                 </span>
-                <span class="category">
+                <span class="category" id="playlist">
                     <a class="icon">
                         Playlist
                     </a>
