--- a/IHM/KDMUSIQUE/accueil.html
+++ b/IHM/KDMUSIQUE/accueil.html
@@ -16,7 +16,7 @@
     <!--HEADER-->
     <div  id="header">
         <nav class="navbar navbar-expand-lg navbar-light" id="navbar">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="accueil.html">
                 <img src="images/logo.png" alt="image" style="width:45px; height:45px;">
             </a>
             <!--Search và micro-->
@@ -33,8 +33,8 @@
             </button>
             <!--Đăng ký và đăng nhập-->
             <div class="seformhd">
-                <a class="seconnecterhd" href="#" style="text-decoration: none;">Se connecter <span  class="daunganhd">/</span> </a>
-                <a class="s_incrirhd" href="#" style="text-decoration: none;">S'incrir</a>
+                <a class="seconnecterhd" href="login.html" style="text-decoration: none;">Se connecter <span  class="daunganhd">/</span> </a>
+                <a class="s_incrirhd" href="signup.html" style="text-decoration: none;">S'incrir</a>
             </div>
           </nav>
     </div>
