--- a/IHM/KDMUSIQUE/album.html
+++ b/IHM/KDMUSIQUE/album.html
@@ -18,7 +18,7 @@
 <body>
     <div id="header">
         <nav class="navbar navbar-expand-lg navbar-light" id="navbar">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="accueil.html">
                 <img src="images/logo.png" alt="image" style="width:45px; height:45px;">
             </a>
             <!--Search và micro-->
@@ -34,10 +34,10 @@
                 <i class="fa fa-search"></i>
             </button>
             <div class="seformhd">
-                <a class="seconnecterhd" href="#" style="text-decoration: none;">Se connecter <span
+                <a class="seconnecterhd" href="login.html" style="text-decoration: none;">Se connecter <span
                         class="daunganhd">/</span> </a>
 
-                <a class="s_incrirhd" href="#" style="text-decoration: none;">S'incrir</a>
+                <a class="s_incrirhd" href="signup.html" style="text-decoration: none;">S'incrir</a>
             </div>
 
         </nav>
