--- a/IHM/KDMUSIQUE/search.html
+++ b/IHM/KDMUSIQUE/search.html
@@ -26,7 +26,7 @@
             <div class="input-group  mr-sm-2" id="searchhd">
                 <input class="form-control" type="search" placeholder="Search" aria-label="Search"  >
                 <div class="input-group-append">
-                    <button type="button" class="btn btn-light" style="box-shadow: 0 0;">
+                    <button id="btnSearchByVoice" onclick="SearchByVoice()" type="button" class="btn btn-light" style="box-shadow: 0 0;">
                         <i class="fa fa-microphone"></i>
                     </button>
                 </div>
@@ -44,6 +44,9 @@
         </nav>
     </div>
     <div class="container" id="body">
+        <div class="popup">
+            <span class="popuptext" id="popupContent">Parlez quelques choses...</span>
+        </div>
         <div id="ResultFound">
             <div class="row" id="row1">
                 <div class="col">
@@ -197,6 +200,7 @@
                 </div>
             </div>
         </div>
+        
     </div>
     <div id="footer" >
         <div id="contentft" class="row">
@@ -239,6 +243,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="js/search.js"></script>
 </body>
 
 </html>
