--- a/IHM/KDMUSIQUE/theme.html
+++ b/IHM/KDMUSIQUE/theme.html
@@ -34,7 +34,7 @@
             <!--Đăng ký và đăng nhập-->
             <div class="seformhd">
                 <a class="seconnecterhd" href="#" style="text-decoration: none;">Se connecter <span  class="daunganhd">/</span> </a>
-                <a class="s_incrirhd" href="#" style="text-decoration: none;">S'incrir</a>
+                <a class="s_incrirhd" href="#" style="text-decoration: none;">S'incrire</a>
             </div>
           </nav>
     </div>
