--- a/IHM/KDMUSIQUE/album.html
+++ b/IHM/KDMUSIQUE/album.html
@@ -37,7 +37,7 @@
                 <a class="seconnecterhd" href="login.html" style="text-decoration: none;">Se connecter <span
                         class="daunganhd">/</span> </a>
 
-                <a class="s_incrirhd" href="signup.html" style="text-decoration: none;">S'incrir</a>
+                <a class="s_incrirhd" href="signup.html" style="text-decoration: none;">S'incrire</a>
             </div>
 
         </nav>
