--- a/IHM/KDMUSIQUE/playlist.html
+++ b/IHM/KDMUSIQUE/playlist.html
@@ -35,7 +35,7 @@
             <div class="seformhd">
                 <a class="seconnecterhd" href="#" style="text-decoration: none;">Se connecter <span  class="daunganhd">/</span> </a>
                 
-                <a class="s_incrirhd" href="#" style="text-decoration: none;">S'incrir</a>
+                <a class="s_incrirhd" href="#" style="text-decoration: none;">S'incrire</a>
             </div>
               
           </nav>
