--- a/IHM/KDMUSIQUE/accueil.html
+++ b/IHM/KDMUSIQUE/accueil.html
@@ -42,6 +42,50 @@
 
     
     <!--CONTENT-->
+    <div class="categories">
+        <div class="categoriesSelection">
+            <span class="category">
+                <a class="icon">
+                    Accueil
+                </a>
+                <img src="icon/Discover.png" style="width:20px; height:20px; margin-left: 40px;">
+            </span>
+            <span class="category">
+                <a class="icon">
+                    Album
+                </a>
+                <img src="icon/Albums.png" style="width:20px; height:20px; margin-left: 40px;">
+            </span>
+            <span class="category">
+                <a class="icon">
+                    Favoris
+                </a>
+                <img src="icon/Favourite.png" style="width:20px; height:20px; margin-left: 40px;">
+            </span>
+            <span class="category">
+                <a class="icon">
+                    Playlist
+                </a>
+                <img src="icon/Plus.png" style="width:20px; height:20px; margin-left: 40px;">
+            </span>
+            <span class="playlist">
+                <a href="#">Playlist 1</a>
+                <img src="icon/Add.png" style="width:20px; height:20px; margin-left: 40px;">
+            </span>
+            <span class="playlist">
+                <a href="#">Playlist 2</a>
+                <img src="icon/Add.png" style="width:20px; height:20px; margin-left: 40px;">
+            </span>
+            <span class="playlist">
+                <a href="#">Playlist 3</a>
+                <img src="icon/Add.png" style="width:20px; height:20px; margin-left: 40px;">
+            </span>
+            <span class="playlist">
+                <a href="#">Playlist 4</a>
+                <img src="icon/Add.png" style="width:20px; height:20px; margin-left: 40px;">
+            </span>
+        </div>
+    </div>
     <div class="container" id="content">
         <!--NOUVEUX-->
         <h1  id="row0">Nouveux</h1>
@@ -538,7 +582,52 @@
         </div>
         <br>
     </div>
-    
+    <div class="playZone">
+        <div class="wrapPlay">
+            <div class="wrap">
+                <div class="wrapInfo">
+                    <img src="icon/cover.jpg">
+                    <p id="infoSong">
+                        Danse
+                        <br>
+                        Lomepal
+                    </p>
+                    <img src="icon/Favourite.png" id="like">
+                </div>
+                <div class="playBar">
+                    <img src="icon/play.png">
+                    <progress value="32" max="100"> 32% </progress>
+                </div>
+            </div>
+        </div>
+
+        <div class="wrapLyrics">
+            <label>Danse</label>
+            <p class="artist">Lomepal</p>
+            <p id="lyrics">Hey, j'repensais à...
+                <br>
+                Yeah
+                <br>
+                Fais la cour aux femmes <br>
+                Je fais la cour aux femmes <br>
+                Hey, hey, yeah <br>
+                On l'a fait dans le sofa <br>
+                Je l'ai fait dans l'œsophage <br>
+                Hey, hey <br>
+                Pauvre de moi, j'me souvenais pas <br>
+                Qu'on avait le pouvoir de danser comme ça <br>
+                Quand on se laisse aller, laisse-toi aller <br>
+                Laisse nos énergies faire, je veux plus parler <br>
+                Je donnerais tout ce que j'ai sur moi <br>
+                Juste pour te voir danser encore une fois <br>
+                Quand tu te laisses aller, laisse-toi aller <br>
+                Oublie les autres connards qui te regardent, yeah <br>
+                Malgré la lumière, on ne voit plus que nous <br>
+                La musique s'est arrêtée, les aiguilles se figent et je sens, je te sens <br>
+                Malgré la lumière, on ne voit plus que nous <br>
+                La musique s'est arrêtée, les aiguilles se figent et je sens, je te sens</p>
+        </div>
+    </div>
 
     <!--FOOTER--> 
     <div id="footer">
